fixed minor issue

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="divwrap">
+    <div id="divwrap">
         <div class="progress-wrap progress" data-progress-percent="100">
             <div id="progress-bar" class="progress"></div>
             <div id="innertext"></div>
